# multiversal-consciousness

./: CMakeLists.txt  main.cpp
src/: main.cpp
src/engine/: AbilitySystem.cpp  AbilitySystem.h  AgentRenderer.cpp  AgentRenderer.h  CameraController.cpp  CameraController.h  Components.h  CoordinationSystem.cpp  CoordinationSystem.h  EntityManager.cpp  EntityManager.h  GameEngine.cpp  GameEngine.h  IInteractable.h  InputManager.cpp  InputManager.h  InteractiveObstacleSystem.cpp  InteractiveObstacleSystem.h  InteractiveObstacles.cpp  InteractiveObstacles.h  LevelLoader.cpp  LevelLoader.h  MovementSystem.cpp  MovementSystem.h  PhyiscsSystem.cpp  PhysicsSystem.h  PhysicsTypes.h  PossessionSystem.cpp  PossessionSystem.h  PuzzleSystem.cpp  PuzzleSystem.h  QuantumLoadoutSystem.cpp  QuantumLoadoutSystem.h  QuantumNodeRenderer.cpp  QuantumNodeRenderer.h  QuantumSystem.cpp  QuantumSystem.h  RealityManager.cpp  RealityManager.h  RealitySystem.cpp  (+7 more)
